<resources>
    <string name="app_name">NoteApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello">Hello</string>
    <string name="one">One</string>
    <string name="two">two</string>
    <string name="three_txt">three</string>
    <string name="skip">Пропустить</string>
    <string name="welcome">Welcome!</string>
    <string name="start_to_work">Начать Работу</string>
    <string name="enter_ext">Введите текст</string>
    <string name="save">Save</string>
    <string name="text">Text</string>
    <string name="ios">Ios</string>
    <string name="Home">Home</string>
    <string name="item">Item</string>
    <string name="add">Add</string>
    <string name="enter_str">Введите строку</string>
    <string name="need_to">Нужно сделать:</string>
    <string name="enter_text">Написать что та</string>
    <string name="noteapp">NoteApp</string>
    <string name="Заметки">noteApp</string>
    <string name="Заметкиw">Заметки</string>
</resources>