<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_moon_not"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/et_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:hint="@string/enter_ext"
        android:padding="16dp"
        android:textColorHint="@color/oen_white2"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/tv_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/text"
        android:textAlignment="center"
        android:textColor="@color/violet"
        android:textSize="34sp" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/violet"
        android:text="@string/save"
        android:textSize="24sp" />


</LinearLayout>